# asof

./: .gitignore  LICENSE  README.md  pyproject.toml  spec.md
.github/: FUNDING.yml
.github/workflows/: test.yml
adapters/antigravity/: README.md  SKILL.md  asof_antigravity_orchestrator.py  hooks_snippet.json  install.py
adapters/claude_code/: README.md  SKILL.md  hooks_snippet.json  install.py  post_tool.py  session_init.py  watch.py
adapters/generic/: README.md
adapters/generic/examples/: anthropic_sdk_wrapper.py  crewai_step.py  langgraph_node.py
adapters/mcp/: README.md  __init__.py  server.py
asof_core/: __init__.py  cli.py  cutoffs.py  output.py  provenance.py  query.py  stat.py  surfacing.py  timestamps.py  url_freshness.py  version.py  watchlist.py
asof_core/hooks/: __init__.py  post_tool.py  session_init.py  watch.py
asof_core/patterns/: __init__.py  high_confidence.py  medium_confidence.py
asof_core/patterns/domains/: __init__.py  crypto.py  devops.py  finance.py  news.py  sports.py  stocks.py  (+2 more)
docs/: design.md  evaluation.md  install-antigravity.md  install-claude-code.md  staleness-surfacing-design.md
tests/: test_antigravity_hook.py  test_antigravity_install.py  test_bash_selfwrite.py  test_cutoff_resolver.py  test_exclude_globs.py  test_live_staleness.py  test_mcp_server.py  test_model_id_freshness.py  test_precision_size_hash.py  test_quote_datum.py  test_smoke.py  test_surfacing.py
tests/abtests/: README.md  analyze.py  battery.jsonl  build_battery.py  findings.md  live_staleness.py  rubric.md  score_judge.py  score_mechanical.py
(+15 files in other folders)
